# moodboard

./: .gitignore  package-lock.json  package.json  run-dev.sh
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  updater.rs
src/lib/components/: ArrowElement.svelte  Canvas.svelte  CircleElement.svelte  ImageContextMenu.svelte  ImageElement.svelte  Lightbox.svelte  PerfHud.svelte  SettingsPanel.svelte  Sidebar.svelte  TagGridView.svelte  TextElement.svelte  Toolbar.svelte
src/lib/stores/: app.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: debounce.ts  ids.ts  imageCache.ts  throttle.ts
src/routes/: +page.svelte
