[package]
name = "simple-moodboard"
version = "0.2.0"
edition = "2021"
description = "Cross-platform moodboard application"

[lib]
name = "simple_moodboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-clipboard-manager = "2"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
open = "5"
dirs = "6"
