[package]
name = "simple-moodboard"
version = "0.9.12"
edition = "2021"
description = "Cross-platform moodboard application"

[lib]
name = "simple_moodboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "devtools", "protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-clipboard-manager = "2"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
open = "5"
dirs = "6"
notify = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "avif"] }
fast_image_resize = { version = "5", features = ["image"] }
